derive-ex-tests/tests/compile_fail/compare_op/eq_with_partial_eq_by.rs
use derive_ex::derive_ex;

#[derive_ex(Eq, PartialEq)]
struct X(#[partial_eq(by = |l, r| l.len() == r.len())] String);

fn main() {}
